WIP: refactoring, added delete route and published status for 'record'
