# internal/models/record.go
@@ -1,13 +1,5 @@
 package models
 
-type RecordStatus string
-
-const (
-	ProcessingRecordStatus RecordStatus = "processin"
-	CompletedRecordStatus  RecordStatus = "completed"
-	PublishedRecordStatus  RecordStatus = "published"
-)
-
 // RecordCreate model info
 //
 //	@Description	Record create model
@@ -21,20 +13,27 @@ type Record struct {
 	ID        uint `gorm:"primaryKey"`
 	Title     string
 	VideoLink string
-	Status    RecordStatus `gorm:"default:'processing'"`
-	Hidden    bool         `gorm:"default:true"`
+	Published bool `gorm:"default:false"`
 	UserID    uint
-	Article   Article
-	Comments  []Comment
+	Article   Article   `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+	Comments  []Comment `gorm:"constraint:OnUpdate:CASCADE,OnDelete:SET NULL;"`
+}
+
+func (r *Record) ToDto() RecordDto {
+	return RecordDto{
+		ID:        r.ID,
+		Title:     r.Title,
+		VideoLink: r.VideoLink,
+		Published: r.Published,
+	}
 }
 
 // RecordDto model info
 //
 //	@Description	Record dto model
 type RecordDto struct {
-	ID        uint         `json:"id" binding:"required" example:"1"`
-	Title     string       `json:"title" binding:"required" example:"title"`
-	VideoLink string       `json:"video_link" binding:"required" example:"https://www.youtube.com/watch?v=4O3UGW-Bbbw" format:"url"`
-	Status    RecordStatus `json:"status" binding:"required" example:"В обработке"`
-	Hidden    bool         `json:"hidden" binding:"required" example:"true"`
+	ID        uint   `json:"id" binding:"required" example:"1"`
+	Title     string `json:"title" binding:"required" example:"title"`
+	VideoLink string `json:"video_link" binding:"required" example:"https://www.youtube.com/watch?v=4O3UGW-Bbbw" format:"url"`
+	Published bool   `json:"published" binding:"required" example:"false"`
 }
