# internal/router/api/article_routes.go
@@ -3,7 +3,6 @@ package api
 import (
 	"net/http"
 	"profbuh/internal/middlewares"
-	"profbuh/internal/models"
 	"profbuh/internal/service"
 	"strconv"
 
@@ -14,39 +13,8 @@ func InitArticleRoutes(r *gin.Engine) {
 	router := r.Group("/api/v1/article")
 	router.Use(middlewares.JwtAuth())
 	{
-		router.POST("/create", CreateArticleWithRecordID)
 		router.GET("/:record_id", GetArticleByRecordID)
 	}
-}
-
-// CreateArticle godoc
-//
-//	@Summary		Create article
-//	@Description	Create article
-//	@Tags			article
-//	@Accept			json
-//	@Produce		json
-//	@Param			article	body	models.ArticleCreate	true	"Article create info"
-//	@Security		Bearer
-//	@Success		200	{object}	models.ArticleDto
-//	@Failure		400	{object}	string	"Bad request"
-//	@Failure		422	{object}	string	"Unprocessable entity"
-//	@Router			/api/v1/article/create [post]
-func CreateArticleWithRecordID(c *gin.Context) {
-	var articleData models.ArticleCreate
-
-	if err := c.ShouldBindJSON(&articleData); err != nil {
-		c.JSON(http.StatusUnprocessableEntity, err.Error())
-		return
-	}
-
-	article, err := service.CreateArticleWithRecordID(c, articleData)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, err.Error())
-		return
-	}
-
-	c.JSON(http.StatusOK, article)
 }
 
 // GetArticleForRecord godoc
